<resources>
    <string name="app_name">PineApple</string>
    <string name="match_notification">You have a New Match!</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- Firebase database fields -->
    <string name="dbfemale">female</string>
    <string name="dbmale">male</string>
    <string name="title_activity_check_profile_before_matched">activity_checkProfileBeforeMatched
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="get_started">Get started</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="splash_welcome">splash_welcome</string>
    <string name="welcome_to_pineapple">Welcome to PineApple</string>
    <string name="confirm_delete_account">You\'re about to delete your account\nEnter your password to confirm</string>
    <string name="a_place_where">A place where you can connect to people\nwho can help with your study, and vice versa</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_no_account"><u>Haven\'t got an account yet? Sign up!</u></string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="configure_your_profile">Configure your profile</string>
    <string name="splash_profile">splash_profile</string>
    <string name="_1_5">1/5</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="_2_5">2/5</string>
    <string name="splash_gender">splash_gender</string>
    <string name="whats_your_gender">What\'s your gender?</string>
    <string name="male">Male</string>
    <string name="_2_4">2/4</string>
    <string name="_1_4">1/4</string>
    <string name="female">Female</string>
    <string name="splash_date">splash_date</string>
    <string name="when_birthday">When was your birthday?</string>
    <string name="_3_4">3/4</string>
    <string name="rate_yourself">Rate yourself</string>
    <string name="_4_4">4/4</string>
    <string name="configure_your_interests">Configure your interests</string>
    <string name="select_subjects">Select hobbies that you are interested in and evaluate yourself so you get matched with appropriate people.</string>
    <string name="changepw_des">Press the button below so we can send you an email\nfor you to reset your password.</string>
    <string name="forgotpw_des">Please enter your email so we can send you an email\nfor you to reset your password.</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="database">Database</string>
    <string name="ui_design">UI Design</string>
    <string name="object_oriented_programming">Object-oriented Programming</string>
    <string name="not_interested">Not interested</string>
    <string name="dislike_image">dislike_image</string>
    <string name="interested">Interested</string>
    <string name="chat">Chat</string>
    <string name="match">Match</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="search_matches">Search Matches</string>
    <string name="message">message</string>
    <string name="message_sender">message sender</string>
    <string name="edit">edit</string>
    <string name="tungtran">tungtran</string>
    <string name="likes">Likes</string>
    <string name="_0">0</string>
    <string name="august_5th_2001">August 5th, 2001</string>
    <string name="_1">1</string>
    <string name="liked_by">Liked by</string>
    <string name="education">Education</string>
    <string name="dummy">dummy</string>
    <string name="rose_j">Rose J</string>
    <string name="august_5th_2001_male">August 5th, 2001 | Male</string>
    <string name="oop">Movies</string>
    <string name="gender">Gender</string>
    <string name="interests">Interests</string>
    <string name="about_me">About me</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
    <string name="something_about_victoria">Something about Victoria</string>
    <string name="hello_world">Hello world!</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="send_email">Send email</string>
    <string name="view_who_likes_you">View who likes you</string>
    <string name="utility">Utility</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="settings">Settings</string>
    <string name="fire">Fire</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="filter">Filter</string>
    <string name="information">Information</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="confirm">Confirm</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="web_client_id">365322481758-peo9njteob2bv50ktue6n49nfceb2tfq.apps.googleusercontent.com</string>
    <string name="show_birthday">Show birthday</string>
    <string name="show_distance">Show Distance</string>
    <string name="back">Back</string>
    <string name="common">Common Passion</string>
    <string name="kol">Key Opinion Leaders</string>
    <string name="block_user">Block user</string>
    <string name="block">Block</string>
    <string name="unmatch_user">Unmatch user</string>
    <string name="unmatch">Unmatch</string>
    <string name="report_user">Report user</string>
    <string name="report">Report</string>
    <string name="safety_toolkit">Safety Toolkit</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="select_a_user_to_unblock_them">Select a user to unblock them</string>
    <string name="are_you_sure_you_want_to_block">Are you sure you want to block</string>
    <string name="are_you_sure_you_want_to_unmatch_with">Are you sure you want to unmatch with</string>
    <string name="report_an_issue_your_have_with_this_user">Report an issue you have with this user</string>

    <string name="cb_movies">Movies</string>
    <string name="cb_music">Music</string>
    <string name="cb_art">Art</string>
    <string name="cb_food">Food</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="time">Time</string>
    <string name="activity">Activity</string>
    <string name="upload_more_images">Upload more images</string>
    <string name="additional_images">Additional Images</string>
    <string name="chatSupport">Chat support</string>

    <!-- introduction pictures-->
    <integer-array name="img_id_arr">
        <item>@drawable/img1</item>
        <item>@drawable/img2</item>
        <item>@drawable/img3</item>
        <item>@drawable/img4</item>
    </integer-array>

    <string-array name="gender_preferences">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="rp_harassment">Harassment</string>
    <string name="rp_pretend">Pretending to be someone</string>
    <string name="rp_swearing">Swearing</string>
    <string name="rp_hate_speech">Hate speech</string>
    <string name="rp_other">Other</string>
    <string name="google_maps_key">"AIzaSyBulyTj2UyG7tnyG_5xf4DGk70o08hEC1c"</string>
    <string name="key_opinion_leaders">Key Opinion Leaders</string>
    <string name="common_passion">Common Passion</string>

    <string name="crips_client_id">942b95e5-7079-4736-9381-ae51bea55428</string>
    <string name="facebook_app_id">417771843039840</string>
    <string name="fb_login_protocol_scheme">fb417771843039840</string>
    <string name="facebook_client_token">a59ac9a91d3ea653f1d1644956acfb60</string>

</resources>
