<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_main"
        android:icon="@drawable/ic_menu_star"
        android:title="@string/match">

    </item>

    <item
        android:id="@+id/ic_fire"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:title="@string/fire">

    </item>

    <item
        android:id="@+id/ic_matched"
        android:icon="@drawable/ic_menu_chat"
        android:title="@string/chat">

    </item>

    <item
        android:id="@+id/ic_utility"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/utility">

    </item>

    <item
        android:id="@+id/ic_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings">

    </item>

</menu>