<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/report_user"
        android:fontFamily="@font/iciel_cadena"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/report_an_issue_your_have_with_this_user"
        android:fontFamily="@font/bubbler_one"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/dialog_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/username"
        android:fontFamily="@font/iciel_cadena"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">
        <RadioButton android:id="@+id/rb_harass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_harassment"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/bubbler_one"
            tools:ignore="UsingOnClickInXml"/>
        <RadioButton android:id="@+id/rb_pretend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_pretend"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/bubbler_one"/>
        <RadioButton android:id="@+id/rb_swearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_swearing"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/bubbler_one"/>
        <RadioButton android:id="@+id/rb_hate_speech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_hate_speech"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/bubbler_one"/>
        <RadioButton android:id="@+id/rb_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_other"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/bubbler_one" />
    </RadioGroup>

</LinearLayout>