<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/report_user"
        android:fontFamily="@font/iciel_cadena"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/report_an_issue_your_have_with_this_user"
        android:fontFamily="@font/bubbler_one"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/dialog_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/username"
        android:fontFamily="@font/iciel_cadena"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/tf_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Specify the issue here..."
        tools:ignore="LabelFor,TextFields" />

</LinearLayout>