<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:background="@color/white">

    <!--<include layout="@layout/layout_top_navigation_back"/>-->
    <include layout="@layout/layout_top_navigation_back" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpw_des"
        android:fontFamily="@font/bubbler_one"
        android:textColor="@color/colorPrimaryGrey"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="96dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/input_email_forgotpw"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/custom_entry"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/grey"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:drawablePadding="12dp"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/bubbler_one"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        tools:targetApi="m" />

    <Button
        android:id="@+id/btn_submit_forgotPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_main"
        android:fontFamily="@font/iciel_cadena"
        android:text="@string/send_email"
        android:textColor="@drawable/fnt_col_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email_forgotpw"/>

</androidx.constraintlayout.widget.ConstraintLayout>
